[project]
name = "crypto-currency-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AhmedHKhan18", email = "ahmed.18hassan.18@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.2.1",
    "requests>=2.32.4",
]
